--- a/src/main_notebook.ipynb
+++ b/src/main_notebook.ipynb
@@ -86,16 +86,12 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "# クラスのインスタンス化（実験パスを指定）\n",
-    "base_prompt = BacePrompt(experiment_base_path=\"/Workspace/b_poc/b_0048/experiments\")\n",
     "customer_prompt = CustomerSummarizePrompt(experiment_base_path=\"/Workspace/b_poc/b_0048/experiments\")\n",
     "\n",
     "# COMMAND ----------\n",
     "\n",
-    "# 実行\n",
-    "base_result = base_prompt.run()\n",
-    "customer_result = customer_prompt.run()\n",
+    "# 子クラスの実行（親クラスの処理も含む）\n",
+    "result = customer_prompt.run()\n",
     "\n",
     "# COMMAND ----------"
    ]
