--- a/src/main_notebook.ipynb
+++ b/src/main_notebook.ipynb
@@ -18,8 +18,8 @@
    },
    "outputs": [],
    "source": [
-    "# 必要なライブラリをインストール\n",
-    "!pip install openai mlflow pyyaml\n",
+    "# 必要なライブラリをバージョン固定でインストール\n",
+    "!pip install openai==2.5.0 mlflow==3.5.0 pyyaml==6.0.2\n",
     "dbutils.library.restartPython()"
    ]
   },
