--- a/src/sensitive_information_judge_prompt_notebook.ipynb
+++ b/src/sensitive_information_judge_prompt_notebook.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e8d24fb5-0780-44d4-9b17-9e9d32bf55c1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# ライブラリ準備"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -65,7 +84,26 @@
    "source": [
     "# 必要なクラスをインポート\n",
     "from base_prompt import BacePrompt\n",
-    "from customer_summarize_prompt import CustomerSummarizePrompt"
+    "from sensitive_information_judge_prompt import SensitiveInformationJudgePrompt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "834fbf5a-37b4-4183-abf8-a0155e88d043",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# 機微情報判断プロンプトクラスのインスタンスを作成"
    ]
   },
   {
@@ -86,7 +124,26 @@
    },
    "outputs": [],
    "source": [
-    "customer_prompt = CustomerSummarizePrompt(experiment_base_path=\"/Workspace/b_poc/b_0048/experiments\")"
+    "prompt = SensitiveInformationJudgePrompt(experiment_base_path=\"/Workspace/b_poc/b_0048/experiments\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f567d2e7-d617-42db-b620-74eedc100032",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# サンプルデータを作成"
    ]
   },
   {
@@ -107,8 +164,27 @@
    },
    "outputs": [],
    "source": [
-    "# AIRISではgenerateとevaluateを実行するためrunを実行\n",
-    "result_AIRIS = customer_prompt.run()"
+    "# サンプルデータを作成\n",
+    "prompt.create_sample_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2e2d425d-3a30-4c6f-98bf-08637e58d632",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# ダミーデータを作成"
    ]
   },
   {
@@ -121,7 +197,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "2fce7984-15ca-432e-b886-44462bda05ab",
+     "nuid": "8d83e979-7897-46d1-bbcf-28df35de2a21",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -129,8 +205,47 @@
    },
    "outputs": [],
    "source": [
-    "# AgentForceではanswer.yamlに回答を記載し、evaluateのみを実行\n",
-    "result_AgentForce = customer_prompt.evaluate()"
+    "prompt.create_dummy_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "eae2ae40-96be-40bf-94a1-cc96e7aaa474",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# LLMによる機微情報判断"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2f3d8e42-d2ad-4c1a-ac6c-ebf82bf6a360",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "prompt.generate()"
    ]
   }
  ],
@@ -147,7 +262,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "main_notebook",
+   "notebookName": "sensitive_information_judge_prompt_notebook",
    "widgets": {}
   },
   "language_info": {
